BPER/DEVF/force-app/main/default/objects/PTF_ModelloDiServizio__mdt/PTF_ModelloDiServizio__mdt.object-meta.xml
<CustomObject>
    <label>Modello di servizio</label>
    <pluralLabel>Modelli di servizio</pluralLabel>
</CustomObject>