BPER/DEVF/force-app/main/default/objects/PTF_ModelloDiServizio__mdt/fields/CRM_MonthsDueDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_MonthsDueDate__c</fullName>
    <label>Months Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>