BPER/DEVF/force-app/main/default/objects/PTF_ModelloDiServizio__mdt/fields/PTF_Abbreviazione__c.field-meta.xml
<CustomField>
    <fullName>PTF_Abbreviazione__c</fullName>
    <label>Abbreviazione</label>
    <length>2</length>
    <type>Text</type>
</CustomField>