BPER/DEVF/force-app/main/default/objects/PTF_ModelloDiServizio__mdt/fields/PTF_IsPool__c.field-meta.xml
<CustomField>
    <fullName>PTF_IsPool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>