BPER/DEVF/force-app/main/default/objects/PTF_ModelloDiServizio__mdt/fields/PTF_SingoloSuFiliale__c.field-meta.xml
<CustomField>
    <fullName>PTF_SingoloSuFiliale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Singolo Su Filiale</label>
    <type>Checkbox</type>
</CustomField>